# marble-app

./: .env.example  .gitignore  index.html  package-lock.json  package.json
backend/: modal_app.py  pyproject.toml  requirements.txt  spatiallm_app.py  svg.py  test_floorplan.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/capture/: CameraViewfinder.tsx  CaptureControls.tsx  CaptureProgress.tsx  PointCloudOverlay.tsx  ScanStatusHUD.tsx  TargetDots.tsx
src/components/gallery/: AssetCard.tsx  AssetGrid.tsx  ProfileHeader.tsx
src/components/layout/: BottomTabBar.tsx  MobileContainer.tsx
src/components/loading/: GeneratingGlobe.tsx  LoadingProgress.tsx
src/components/ui/: IconButton.tsx  ProgressBar.tsx
src/components/viewer/: CameraController.tsx  FloorPlanModal.tsx  SceneCanvas.tsx  SceneModel.tsx  ViewerControls.tsx  VirtualJoystick.tsx
src/hooks/: useCamera.ts  useCameraMovement.ts  useFloorPlan.ts  useJoystick.ts  usePhotoSession.ts  useStreamVGGT.ts
src/pages/: CapturePage.tsx  GeneratingPage.tsx  ProfilePage.tsx  ViewerPage.tsx
src/stores/: assetStore.tsx  scanStore.tsx
src/types/: index.ts
src/utils/: constants.ts  formatTime.ts
